--- a/client/src/CSS/GetInTOuchForm.css
+++ b/client/src/CSS/GetInTOuchForm.css
@@ -1,12 +1,17 @@
 /* GetInTouchForm.css */
-
+.get-in-touch-page{
+    height:700px;
+    display: flex;
+    align-items: center;
+}
 .get-in-touch-container {
-    max-width: 400px;
+    width: 400px;
     margin: 0 auto;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    height:450px;
 }
 
 h2 {
