--- a/client/src/CSS/AppFooterCSS.css
+++ b/client/src/CSS/AppFooterCSS.css
@@ -5,6 +5,9 @@
     align-items: center;
     color: white;
 }
+.footer-container *{
+    color: white;
+}
 .fa-brands{
     padding: 10px;
     cursor: pointer;
