--- a/client/src/CSS/RegisrationPageCSS.css
+++ b/client/src/CSS/RegisrationPageCSS.css
@@ -29,3 +29,111 @@
 .date-of-birth-div{
     display: flex;
 }
+
+body {
+    font-family: 'Arial', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+.registration-page, .login-page {
+    height: 100vh;
+    margin: 0;
+}
+
+/* Style the left and right sections of the form */
+.login-page-logo {
+    background-image: url('../images/bgimage.png');
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px 0 0 10px;
+}
+.create-post-logo{
+    background-image: url('../images/CREATEpOST.jpg');
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px 0 0 10px;
+}
+
+.registration-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    background-color: #fff;
+    border-radius: 0 10px 10px 0;
+    width: 100%;
+}
+
+/* Style the form header */
+.login-header h1 {
+    font-size: 28px;
+    margin-bottom: 5px;
+    color: #333;
+}
+
+.login-header p {
+    font-size: 16px;
+    margin: 5px 0 20px;
+    color: #666;
+}
+
+/* Style form labels and inputs */
+.form-lables {
+    text-align: left;
+    margin-bottom: 5px;
+}
+
+input[type="text"],
+input[type="tel"],
+input[type="password"] {
+    width: 100%;
+    padding: 12px;
+    margin: 8px 0;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-sizing: border-box;
+}
+
+/* Style the register button */
+.login-button {
+    padding: 15px;
+    border-radius: 8px;
+    background-color: #4CAF50;
+    color: white;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    .fa-primary{
+        color: blue;
+    }
+}
+
+.login-button:hover {
+    background-color: #45a049;
+}
+
+/* Style the back to home link */
+.fa-primary {
+    text-decoration: none;
+    color: #666;
+    font-size: 14px;
+    margin-top: 10px;
+    display: inline-block;
+}
+
+.fa-primary:hover {
+    color: #333;
+}
+
+/* Style the error message */
+.error-message {
+    color: red;
+    font-size: 16px;
+    margin-top: 8px;
+    text-align: center;
+}
+.registration-page-logo{
+    background-image: url('../images/CreateyourProfile.gif'); /* Replace 'your-image.jpg' with your image file path */
+    background-size: cover;
+    background-position: center;
+}
