--- a/client/src/CSS/LoginPageCSS.css
+++ b/client/src/CSS/LoginPageCSS.css
@@ -88,6 +88,7 @@ input[type="password"] {
 .login-button-container{
     display: flex;
     justify-content: space-evenly;
+    width: 100%;
 }
 
 .create-account-div{
